@startuml
skinparam style strictuml
skinparam defaultfontname Verdana
left to right direction
hide empty members
'skinparam linetype ortho
title Modèle du domaine pour le système de gestion des bordereau Ch. 1 de Larman
class Course {
  sigle : String
  groupe : String
  titre : String
  nb_max_student: String
}
class Student {
  first_name: String
  last_name: String
  email: String
  permanent_code: String
}
class Teacher {
  first_name: String
  last_name: String
  email: String
}
class Note {
   type: String
   type_id: Integer
   note: Float
}
Note "*"  -- "1"  Course: sont obtenu dans le cadre >
Student "1" -- "*" Course : est inscrit > 
Student "1" -- "*" Note: obtient >
Teacher "1" -left- "*" Course: Enseigne >
@enduml